--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -101,8 +101,24 @@ video {
   
 }
 
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+a:active {
+    text-decoration: none;
+}
+
 /* HTML5 display-role reset for older browsers */
-article,
+/*article,
 aside,
 details,
 figcaption,
@@ -125,18 +141,16 @@ q { quotes: none; }
 blockquote:before,
 blockquote:after,
 q:before,
-q:after {
-  
+q:after { 
   /* Misc */
-  content: '';
+/*  content: '';
   content: none;
 
-}
+}*/
 
-table {
-  
+/*table {  */
   /* Visual */
-  border-collapse: collapse;
+  /*border-collapse: collapse;
   border-spacing: 0;
 
-}
+}*/
