--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,156 @@
-h1 {
-	border: 1px solid red;
+
+body { 
+	background-color: #ededed;
+	font-family: 'Open Sans', sans-serif;
+	/*font-family: 'Roboto', sans-serif;*/
+	font-size: 90%;
 }
+
+p {line-height: 2.2em;}
+
+.title {
+
+}
+
+nav { background-color: #fff; }
+
+#pageTitle {
+	display: inline-block;
+	color: #fff;
+	font-weight: bold;
+	font-size: 150%;
+	background-color: #4daaa5;
+	height: 50px;
+	padding: 12px 15px 0 15px;
+}
+
+.myNavBar { float: right; }
+
+.navItem {
+	display: inline-block;
+	margin: 5px 0 0 10px;
+	padding: 14px 8px 13px 8px;
+/*	border: 1px solid red;*/
+}
+
+.nestedItem {
+	margin-left: -90px;
+	margin-top: 13px;
+}
+
+.nestedItem a {
+	display: inline-block;
+	height: 38px;
+}
+
+.nestedItem a span {
+	display: block;
+	margin-top: 7px;
+}
+
+ul.nestedItem li:first-child { 
+	margin-top: -5px; 
+}
+
+ul.nestedItem li:last-child {
+	margin-bottom: -5px; 
+}
+
+section { 
+	margin-top: 40px; 
+	padding-bottom: 80px; 
+}
+
+.left, .main {
+	background-color: #fff;
+	padding: 30px 30px 30px 30px;
+}
+
+.right {
+		background-color: #fff;
+	padding: 30px 30px 30px 30px;
+}
+
+.left img {
+	float: left;
+	margin-right: 20px;
+}
+
+.title1 {
+	margin-top: 30px;
+	margin-bottom: 30px;
+	padding-bottom: 20px;
+	border-bottom: 1px solid #eee;
+}
+
+.title1 span {
+	color: #4daaa5;
+	font-size: 26px;
+	font-weight: bold;
+	margin-top: 30px;
+	padding-bottom: 20px;
+}
+
+/*.right {
+	background-color: #fff;
+	padding: 30px 20px 30px 30px;
+}*/
+
+.right div {
+	margin-top: -20px;
+}
+
+.title2 {
+	margin-top: 30px;
+	margin-bottom: 50px;
+	padding-bottom: 20px;
+	border-bottom: 1px solid #eee;
+}
+
+.title2 span {
+	font-size: 20px;
+	font-weight: bold;
+	margin-top: 30px;
+	padding-bottom: 20px;
+	color: #4daaa5;
+}
+
+footer {
+	color: #fff;
+	background-color: #666;
+	border-top: 5px solid #4daaa5;
+	padding-top: 12px;
+	padding-bottom: 12px;
+}
+
+footer p {
+	font-size: 80%;
+	text-align: center;
+}
+
+
+/******* For Comparison page ********/
+
+.addMargin {
+	margin-bottom: 40px;
+}
+
+.title3 {
+	color: #4daaa5;
+	font-size: 120%;
+	font-weight: bold;
+	text-align: center;
+}
+
+.center {
+	text-align: center;
+}
+
+
+
+
+
+
+
+
+
