--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@ body {
 	font-family: 'Open Sans', sans-serif;
 	/*font-family: 'Roboto', sans-serif;*/
 	font-size: 90%;
+	position: relative;
 }
 
 p {line-height: 2.2em;}
@@ -12,6 +13,7 @@ p {line-height: 2.2em;}
 
 }
 
+/******* Nav ********/
 nav { background-color: #fff; }
 
 #pageTitle {
@@ -56,19 +58,116 @@ ul.nestedItem li:last-child {
 	margin-bottom: -5px; 
 }
 
+/************** End Nav ****************/
+
+/************ Index Page *******************/
+
 section { 
 	margin-top: 40px; 
 	padding-bottom: 80px; 
 }
 
-.left, .main {
+.left {
 	background-color: #fff;
+	margin-bottom: 20px; 
 	padding: 30px 30px 30px 30px;
 }
 
 .right {
-		background-color: #fff;
-	padding: 30px 30px 30px 30px;
+	background-color: #fff;
+	margin-bottom: 20px; 
+	padding: 30px 10px 30px 30px;
+}
+
+.rightImg {
+	height: 145px;
+	width: 145px;
+}
+
+/*.graphes img {
+		display: block;
+		width: 500px;
+		height: auto;
+		border: 1px solid red;
+}*/
+
+@media (max-width: 1600px) {
+
+	.graphes img {
+		display: block;
+		width: 550px;
+		height: auto;
+		border: 1px solid red;
+	}
+}
+
+@media (max-width: 1300px) {
+
+	.graphes img {
+		display: block;
+		width: 500px;
+		height: auto;
+		border: 1px solid red;
+	}
+}
+
+@media (max-width: 1200px) {
+	.rightImg {
+		height: 115px;
+		width: 115px;
+	}
+
+	.graphes img {
+		display: block;
+		width: 450px;
+		height: auto;
+		border: 1px solid res;
+	}
+}
+
+@media (max-width: 990px) {
+	.rightImg {
+		height: 150px;
+		width: 150px;
+	}
+
+	.graphes img {
+		display: inline-block;
+		width: 600px;
+		height: auto;
+		border: 1px solid res;
+	}
+}
+
+@media (max-width: 600px) {
+
+	.graphes img {
+		display: inline-block;
+		width: 500px;
+		height: auto;
+		border: 1px solid res;
+	}
+}
+
+
+@media (max-width: 400px) {
+
+	.graphes img {
+		display: inline-block;
+		width: 400px;
+		height: auto;
+		border: 1px solid res;
+	}
+}
+
+@media (max-width: 600px) {
+
+	.graphes img {
+		display: inline-block;
+		width: 400px;
+		height: auto;
+		border: 1px solid res;
+	}
 }
 
 .left img {
@@ -76,7 +175,7 @@ section {
 	margin-right: 20px;
 }
 
-.title1 {
+.title1, .title2 {
 	margin-top: 30px;
 	margin-bottom: 30px;
 	padding-bottom: 20px;
@@ -91,22 +190,6 @@ section {
 	padding-bottom: 20px;
 }
 
-/*.right {
-	background-color: #fff;
-	padding: 30px 20px 30px 30px;
-}*/
-
-.right div {
-	margin-top: -20px;
-}
-
-.title2 {
-	margin-top: 30px;
-	margin-bottom: 50px;
-	padding-bottom: 20px;
-	border-bottom: 1px solid #eee;
-}
-
 .title2 span {
 	font-size: 20px;
 	font-weight: bold;
@@ -114,6 +197,8 @@ section {
 	padding-bottom: 20px;
 	color: #4daaa5;
 }
+
+/************ End Index Page *******************/
 
 footer {
 	color: #fff;
@@ -131,21 +216,37 @@ footer p {
 
 /******* For Comparison page ********/
 
-.addMargin {
-	margin-bottom: 40px;
+.main {
+	background-color: #fff;
+	padding: 30px;
+/*	border: 1px solid red;*/
 }
 
 .title3 {
+	margin-top: -10px;
+/*	border: 1px solid red;*/
+}
+
+.graphes {
+	margin-top: 50px;
+/*	border: 1px solid red;*/
+}
+
+.graphes p {
 	color: #4daaa5;
 	font-size: 120%;
 	font-weight: bold;
 	text-align: center;
 }
 
+.graphes div {
+	margin-bottom: 30px;
+}
+
+
 .center {
 	text-align: center;
 }
-
 
 
 
